Updated main.ipynb to include questions and answers

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,6 +576,431 @@
     "print(\"Q20: Find the department names and the number of employees who have been in each department for more than 2 years.\")\n",
     "pprint(result)\n",
     "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q21: Retrieve a list of departments along with the total number of employees in each department.\n",
+      "[('Sales', 4), ('Marketing', 4), ('Engineering', 2)]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 21: Retrieve a list of departments along with the total number of employees in each department.\n",
+    "query = \"SELECT D.department_name, COUNT(E.employee_id) FROM employee E INNER JOIN department D ON E.department_id = D.department_id GROUP BY department_name;\"\n",
+    "cursor.execute(query)\n",
+    "result = cursor.fetchall()\n",
+    "print(\"Q21: Retrieve a list of departments along with the total number of employees in each department.\")\n",
+    "pprint(result)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q22: Find the average salary of employees hired in the year 2022.\n",
+      "[(Decimal('85000.0000'),)]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 22: Find the average salary of employees hired in the year 2022.\n",
+    "query = \"\"\"\n",
+    "SELECT AVG(E.Salary) AS AvgSalary2022 \n",
+    "FROM employee E \n",
+    "WHERE YEAR(E.hire_date) = '2022';\n",
+    "\"\"\"\n",
+    "cursor.execute(query)\n",
+    "result = cursor.fetchall()\n",
+    "print(\"Q22: Find the average salary of employees hired in the year 2022.\")\n",
+    "pprint(result)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q23: Identify the department with the highest total salary expenditure.\n",
+      "[('Marketing', Decimal('358000')),\n",
+      " ('Sales', Decimal('305000')),\n",
+      " ('Engineering', Decimal('170000'))]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 23: Identify the department with the highest total salary expenditure.\n",
+    "query = \"\"\"\n",
+    "SELECT D.department_name, SUM(E.salary) \n",
+    "FROM employee E \n",
+    "INNER JOIN department D ON E.department_id = D.department_id\n",
+    "GROUP BY department_name ORDER BY SUM(E.salary) DESC;\n",
+    "\"\"\"\n",
+    "cursor.execute(query)\n",
+    "result = cursor.fetchall()\n",
+    "print(\"Q23: Identify the department with the highest total salary expenditure.\")\n",
+    "pprint(result)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q24: Retrieve a list of employees who earn more than the average salary in their respective departments.\n",
+      "[('Brian Wu', 'Marketing', 88000),\n",
+      " ('Michael Chen', 'Engineering', 90000),\n",
+      " ('Sarah Lee', 'Marketing', 85000),\n",
+      " ('Alex Kim', 'Marketing', 95000),\n",
+      " ('Jane Doe', 'Marketing', 90000),\n",
+      " ('Brian Wu', 'Marketing', 88000),\n",
+      " ('Michael Chen', 'Engineering', 90000),\n",
+      " ('Sarah Lee', 'Marketing', 85000),\n",
+      " ('Alex Kim', 'Marketing', 95000),\n",
+      " ('Jane Doe', 'Marketing', 90000),\n",
+      " ('Brian Wu', 'Marketing', 88000),\n",
+      " ('Michael Chen', 'Engineering', 90000),\n",
+      " ('Sarah Lee', 'Marketing', 85000),\n",
+      " ('Alex Kim', 'Marketing', 95000),\n",
+      " ('Jane Doe', 'Marketing', 90000)]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 24: Retrieve a list of employees who earn more than the average salary in their respective departments.\n",
+    "query = \"\"\"\n",
+    "SELECT E.employee_name, D.department_name, E.salary \n",
+    "FROM employee E \n",
+    "INNER JOIN department D ON E.department_id = D.department_id \n",
+    "JOIN (\n",
+    "    SELECT DD.department_id, AVG(EE.salary) AS avg_salary \n",
+    "    FROM employee EE, department DD \n",
+    "    GROUP BY DD.department_id\n",
+    ") AS avg_salaries ON D.department_id = E.department_id \n",
+    "WHERE avg_salaries.avg_salary < E.salary;\n",
+    "\"\"\"\n",
+    "cursor.execute(query)\n",
+    "result = cursor.fetchall()\n",
+    "print(\"Q24: Retrieve a list of employees who earn more than the average salary in their respective departments.\")\n",
+    "pprint(result)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q25: Find the employee who has the highest salary and the department they belong to.\n",
+      "[('Alex Kim', 'Marketing', 95000)]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 25: Find the employee who has the highest salary and the department they belong to.\n",
+    "query = \"\"\"\n",
+    "SELECT E.employee_name, D.department_name, E.salary \n",
+    "FROM employee E \n",
+    "INNER JOIN department D ON E.department_id = D.department_id \n",
+    "WHERE E.salary = (SELECT MAX(EE.salary) FROM employee EE);\n",
+    "\"\"\"\n",
+    "cursor.execute(query)\n",
+    "result = cursor.fetchall()\n",
+    "print(\"Q25: Find the employee who has the highest salary and the department they belong to.\")\n",
+    "pprint(result)\n",
+    "print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q26: List the employees who have been in their current job for more than three years.\n",
+      "[(2, 'Jane Doe', 2, 'Marketing Manager', '2019-03-15'),\n",
+      " (4, 'Emily Wong', 3, 'Software Engineer', '2017-09-01'),\n",
+      " (8, 'David Lee', 1, 'Salesperson', '2019-09-01'),\n",
+      " (10, 'Brian Wu', 2, 'Marketing Manager', '2018-08-01')]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 26: List the employees who have been in their current job for more than three years.\n",
+    "query = \"\"\"\n",
+    "SELECT e.employee_id, e.employee_name, jh.job_id, j.job_title, jh.start_date \n",
+    "FROM employee e \n",
+    "JOIN job_history jh ON e.employee_id = jh.employee_id \n",
+    "JOIN job j ON jh.job_id = j.job_id \n",
+    "WHERE TIMESTAMPDIFF(YEAR, jh.start_date, CURRENT_DATE) > 3 AND jh.end_date = '';\n",
+    "\"\"\"\n",
+    "cursor.execute(query)\n",
+    "result = cursor.fetchall()\n",
+    "print(\"Q26: List the employees who have been in their current job for more than three years.\")\n",
+    "pprint(result)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q27: Display the department names along with the number of distinct job titles in each department.\n",
+      "[('Sales', 6), ('Marketing', 4), ('Engineering', 2)]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 27: Display the department names along with the number of distinct job titles in each department.\n",
+    "query = \"\"\"\n",
+    "SELECT D.department_name, COUNT(J.job_title) \n",
+    "FROM employee E \n",
+    "INNER JOIN department D ON E.department_id = D.department_id\n",
+    "INNER JOIN job_history JH ON E.employee_id = JH.employee_id\n",
+    "INNER JOIN job J ON JH.job_id = J.job_id\n",
+    "GROUP BY D.department_name ORDER BY D.department_name DESC;\n",
+    "\"\"\"\n",
+    "cursor.execute(query)\n",
+    "result = cursor.fetchall()\n",
+    "print(\"Q27: Display the department names along with the number of distinct job titles in each department.\")\n",
+    "pprint(result)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q28: Find the job title with the highest number of employees.\n",
+      "[('Marketing Manager', 5)]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 28: Find the job title with the highest number of employees.\n",
+    "query = \"\"\"\n",
+    "SELECT J.job_title, COUNT(J.job_title) \n",
+    "FROM employee E\n",
+    "INNER JOIN department D ON E.department_id = D.department_id\n",
+    "INNER JOIN job_history JH ON E.employee_id = JH.employee_id\n",
+    "INNER JOIN job J ON JH.job_id = J.job_id\n",
+    "GROUP BY J.job_title ORDER BY COUNT(J.job_title) DESC LIMIT 1;\n",
+    "\"\"\"\n",
+    "cursor.execute(query)\n",
+    "result = cursor.fetchall()\n",
+    "print(\"Q28: Find the job title with the highest number of employees.\")\n",
+    "pprint(result)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q29: List employees who have the same job title as the employee with employee_id = 1.\n",
+      "[('John Smith', 'Software Engineer'),\n",
+      " ('Emily Wong', 'Software Engineer'),\n",
+      " ('Michael Chen', 'Software Engineer')]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 29: List employees who have the same job title as the employee with employee_id = 1.\n",
+    "query = \"\"\"\n",
+    "SELECT E.employee_name, J.job_title\n",
+    "FROM employee E\n",
+    "JOIN job_history JH ON E.employee_id = JH.employee_id\n",
+    "JOIN job J ON JH.job_id = J.job_id\n",
+    "WHERE J.job_id = (\n",
+    "    SELECT job_id\n",
+    "    FROM job_history\n",
+    "    WHERE employee_id = 1 AND end_date = ''\n",
+    ");\n",
+    "\"\"\"\n",
+    "cursor.execute(query)\n",
+    "result = cursor.fetchall()\n",
+    "print(\"Q29: List employees who have the same job title as the employee with employee_id = 1.\")\n",
+    "pprint(result)\n",
+    "print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q30: Find the department with the fewest employees.\n",
+      "[('Engineering', 2)]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 30: Find the department with the fewest employees.\n",
+    "query = \"\"\"\n",
+    "SELECT D.department_name, COUNT(E.employee_id) AS EmployeeCount\n",
+    "FROM employee E\n",
+    "INNER JOIN department D ON E.department_id = D.department_id\n",
+    "GROUP BY department_name ORDER BY EmployeeCount ASC limit 1;\n",
+    "\"\"\"\n",
+    "cursor.execute(query)\n",
+    "result = cursor.fetchall()\n",
+    "print(\"Q30: Find the department with the fewest employees.\")\n",
+    "pprint(result)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q31: Display the employee names and their job titles for employees who were hired after employee with employee_id = 5.\n",
+      "[('Sarah Lee', 'Marketing Manager'), ('Amanda Liu', 'Salesperson')]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 31: Display the employee names and their job titles for employees who were hired after employee with employee_id = 5.\n",
+    "query = \"\"\"\n",
+    "SELECT E.employee_name, J.job_title \n",
+    "FROM employee E\n",
+    "INNER JOIN job_history JH ON E.employee_id = JH.employee_id\n",
+    "INNER JOIN job J ON JH.job_id = J.job_id\n",
+    "WHERE JH.start_date > \n",
+    "    (SELECT start_date FROM \n",
+    "        job_history WHERE \n",
+    "        employee_id = 5 AND end_date = '')\n",
+    "\"\"\"\n",
+    "cursor.execute(query)\n",
+    "result = cursor.fetchall()\n",
+    "print(\"Q31: Display the employee names and their job titles for employees who were hired after employee with employee_id = 5.\")\n",
+    "pprint(result)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q32: Retrieve the job titles and the total number of employees in each job title, but exclude job titles with fewer than 3 employees.\n",
+      "[('Marketing Manager', 5), ('Salesperson', 4)]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 32: Retrieve the job titles and the total number of employees in each job title, but exclude job titles with fewer than 3 employees.\n",
+    "query = \"\"\"\n",
+    "SELECT J.job_title, COUNT(E.employee_id) EmployeeCount \n",
+    "FROM employee E\n",
+    "INNER JOIN job_history JH ON E.employee_id = JH.employee_id\n",
+    "INNER JOIN job J ON JH.job_id = J.job_id \n",
+    "GROUP BY J.job_title HAVING EmployeeCount > 3;\n",
+    "\"\"\"\n",
+    "cursor.execute(query)\n",
+    "result = cursor.fetchall()\n",
+    "print(\"Q32: Retrieve the job titles and the total number of employees in each job title, but exclude job titles with fewer than 3 employees.\")\n",
+    "pprint(result)\n",
+    "print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function print(*args, sep=' ', end='\\n', file=None, flush=False)>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Question 33: Find the departments where the average salary is above the overall average salary across all departments.\n",
+    "query = \"\"\"\n",
+    "SELECT D.department_name, AVG(E.salary) AS average_salary \n",
+    "FROM employee E \n",
+    "INNER JOIN department D ON D.department_id = E.department_id \n",
+    "GROUP BY D.department_name \n",
+    "HAVING average_salary > (SELECT AVG(salary) FROM employee);\n",
+    "\"\"\"\n",
+    "cursor.execute(query)\n",
+    "result = cursor.fetchall()\n",
+    "print"
    ]
   }
  ],
