Updated main.ipynb to include questions and answers

--- a/main.ipynb
+++ b/main.ipynb
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +984,7 @@
        "<function print(*args, sep=' ', end='\\n', file=None, flush=False)>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,7 +1000,9 @@
     "\"\"\"\n",
     "cursor.execute(query)\n",
     "result = cursor.fetchall()\n",
-    "print"
+    "print(\"Q33: Find the departments where the average salary is above the overall average salary across all departments.\")\n",
+    "pprint(result)\n",
+    "print()"
    ]
   }
  ],
